[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "studyplan"
version = "0.1.0"
description = "学习计划命令行工具 - 备考用户的每日学习任务管理"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "python-dateutil>=2.8.0",
    "tabulate>=0.9.0",
]

[project.scripts]
studyplan = "studyplan.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["studyplan*"]
